<resources>
    <string name="app_name">Scissors Paper Stone</string>
    <string name="stone">Камень</string>
    <string name="scissors">Ножницы</string>
    <string name="paper">Бумага</string>
    <string name="play">Играть</string>
    <string name="settings">Настройки</string>
    <string name="win_points">Количество очков для победы</string>
    <string name="back">Назад</string>
    <string name="player">Игрок</string>
    <string name="computer">Компьютер</string>
    <string name="restart">Начать заново</string>
    <string name="close_game">В меню</string>
    <string name="player_choice">Выбор игрока</string>
    <string name="comp_choice">Выбор компьютера</string>
    <string name="continue_game">Продолжить</string>
</resources>