<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/stone"
        style="@style/HeaderText"
        android:text="@string/stone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scissors"
        android:textColor="#171717"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/scissors"
        style="@style/HeaderText"
        android:text="@string/scissors"
        app:layout_constraintTop_toBottomOf="@id/stone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/paper"
        android:textColor="#8F8F8F"/>

    <TextView
        android:id="@+id/paper"
        style="@style/HeaderText"
        android:text="@string/paper"
        app:layout_constraintTop_toBottomOf="@id/scissors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/paper"
        android:textColor="#C2C2C2"/>

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:textSize="25sp"

        app:strokeColor="#949292"
        android:textColor="#696969"
        app:layout_constraintTop_toBottomOf="@id/paper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/settings"
        android:contentDescription="Settings button"
        android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>