<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".GameActivity">
    <ImageButton
        style="@style/BackButton"
        android:id="@+id/back_button"
        android:contentDescription="@string/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/computer"/>

    <TextView
        android:id="@+id/player_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/player"
        app:layout_constraintLeft_toLeftOf="@id/player"
        app:layout_constraintRight_toRightOf="@id/player"/>


    <TextView
        android:id="@+id/computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintLeft_toRightOf="@id/player"/>

    <TextView
        android:id="@+id/computer_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/computer"
        app:layout_constraintLeft_toLeftOf="@id/computer"
        app:layout_constraintRight_toRightOf="@id/computer"/>

    <TextView
        android:id="@+id/round_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/player_points"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        />

    <ImageView
        style="@style/ChoiceIcon"
        android:id="@+id/player_choice"
        app:layout_constraintLeft_toLeftOf="@id/player"
        app:layout_constraintRight_toRightOf="@id/player"
        app:layout_constraintTop_toBottomOf="@id/round_status"
        app:layout_constraintBottom_toTopOf="@id/control_panel"
        android:contentDescription="@string/player_choice"
        android:scaleX="-1"
        />

    <ImageView
        style="@style/ChoiceIcon"
        android:id="@+id/comp_choice"
        app:layout_constraintLeft_toLeftOf="@id/computer"
        app:layout_constraintRight_toRightOf="@id/computer"
        app:layout_constraintTop_toBottomOf="@id/round_status"
        app:layout_constraintBottom_toTopOf="@id/control_panel"
        android:contentDescription="@string/comp_choice"
        android:scaleX="-1"
        android:scaleY="-1"/>

    <include
        android:id="@+id/control_panel"
        layout="@layout/control_panel"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>