<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        app:layout_constraintRight_toLeftOf="@id/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/win_points"/>

    <TextView
        android:id="@+id/settings"
        android:textColor="#171717"
        android:text="@string/settings"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/win_points"
        android:textColor="#171717"
        android:text="@string/win_points"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/win_points_seekbar"
        />
    <TextView
        android:id="@+id/win_points_value"
        android:textColor="#171717"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/win_points_seekbar"
        app:layout_constraintLeft_toLeftOf="@id/win_points_seekbar"
        app:layout_constraintRight_toRightOf="@id/win_points_seekbar"/>
    <SeekBar
        android:id="@+id/win_points_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="9"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:progressBackgroundTint="#171717"
        android:progressTint="#2F2FB5"
        android:thumbTint="#707070"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/win_points"
        app:layout_constraintTop_toTopOf="@id/win_points"
        app:layout_constraintBottom_toBottomOf="@id/win_points"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>